# minecraft

./: CMakeLists.txt  LICENSE  README.md
include/: Game.hpp  Renderer.hpp  Shader.hpp  ShaderProgram.hpp  Window.hpp
include/glad/: glad.h
include/math/: Matrix.hpp  Vector.hpp  pi.hpp
shaders/: vertex.glsl
src/: Game.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  Window.cpp  glad.c  main.cpp
